# GameEngine3D

./: .gitignore
Shaders/: default.frag  default.vert
Triangle/: CMakeLists.txt
Triangle/include/glad/: glad.h
Triangle/src/: Camera.cpp  Camera.h  EBO.cpp  EBO.h  Mesh.cpp  Mesh.h  ShaderClass.cpp  ShaderClass.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  glad.c  main.cpp
